# Loom

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SETUP.md  SKILL.md  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
.gstack/security-reports/: 2026-06-14-130013.json
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: ConfidenceBadge.tsx  DomainBadge.tsx  Layout.tsx  ObservationCard.tsx  SearchBar.tsx
dashboard/src/pages/: ActivityPage.tsx  AnalyticsPage.tsx  LoginPage.tsx  ObservationDetailPage.tsx  ObservationsPage.tsx  SettingsPage.tsx  TeamsPage.tsx
examples/domain_configs/: design.yml  sales.yml
loom/: __init__.py  cli.py  config.py  configs.py  extraction.py  github.py  server.py  timeutil.py
loom/cli/: __init__.py  main.py
loom/coaching/: __init__.py  amplifier.py
loom/engine/: __init__.py  auto_observer.py  category_registry.py  context_loader.py  decay.py  decay_manager.py  domain_extractor.py  extractor.py  graph_store.py  knowledge_graph.py  llm_extractor.py  observation.py  observation_store.py  org_store.py  retention.py  rule_store.py  source_tracker.py  timeline.py
loom/integrations/: __init__.py  github_webhook.py  ingest_router.py  jira_connector.py  linear_connector.py  slack_connector.py  templates.py
loom/llm/: __init__.py  anthropic.py  base.py  deepseek.py  factory.py  gemini.py
loom/mcp/: __init__.py  __main__.py  proxy.py  server.py
loom/onboarding/: __init__.py  packs.py  succession.py
loom/security/: __init__.py  access.py  audit.py  integrity.py  middleware.py  private_mode.py  rbac.py  redactor.py
loom/security/tests/: test_security.py
loom/semantic/: __init__.py  embedding_provider.py  hybrid_search.py  llm_extractor.py  vector_store.py
loom/server/: __init__.py  api.py  auth.py  deps.py  orgs.py  static.py
loom/storage/: __init__.py  adapters.py  backend.py  file_backend.py  jsonio.py  postgres_store.py  sqlite_backend.py
loom/storage/migrations/: 001_initial.sql
tests/: conftest.py  test_domain_extractor.py  test_llm_extractor.py  test_llm_providers.py  test_mcp_integration.py  test_mcp_tools.py  test_redactor.py  test_rule_store.py  test_server_hooks.py  test_storage_safety.py
tests/engine/: test_category_registry.py  test_decay_manager.py  test_domain_extractor.py  test_migration.py  test_observation.py  test_observation_store.py  test_source_tracker.py
tests/integrations/: test_github_webhook.py  test_ingest_router.py
tests/mcp/: test_security_wired.py  test_server_full.py
