[project]
name = "loom-agent"
version = "0.3.0"
description = "The memory layer for AI agents — shared learning across your entire organization. Observe, teach, reflect, auto-capture, auto-recall, onboard, succession, coaching amplification, per-observation RBAC, auditable timeline, and more."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
llm = [
    "anthropic>=0.30.0",
]
deepseek = [
    "openai>=1.0.0",
]
gemini = [
    "google-generativeai>=0.8.0",
]
cloud = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
loom = "loom.cli.main:main"


[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loom*"]

[tool.setuptools.package-data]
loom = ["storage/migrations/*.sql"]
